[gd_scene load_steps=4 format=3 uid="uid://bmgl40ju7v42c"]

[ext_resource type="Script" path="res://Objects/Console2D/Levels/room.gd" id="1_3x4f5"]
[ext_resource type="Texture2D" uid="uid://c1w2l01ipxkvx" path="res://icon.svg" id="2_gbmaj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0v18t"]
size = Vector2(250, 250)

[node name="Room" type="Node2D"]
process_mode = 3
script = ExtResource("1_3x4f5")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_0v18t")

[node name="TopLeft" type="Node2D" parent="."]
position = Vector2(-125, -125)

[node name="Sprite2D" type="Sprite2D" parent="TopLeft"]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_gbmaj")

[node name="BottomRight" type="Node2D" parent="."]
position = Vector2(125, 125)

[node name="Sprite2D2" type="Sprite2D" parent="BottomRight"]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_gbmaj")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
